Start experimenting with forking the formatter in a separate process.